--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,4 +29,11 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file FirstConsoleApp/pom.xml
-
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.3
+      with:
+        # Artifact name
+        name: FirstConsoleApp
+        # A file, directory or wildcard pattern that describes what to upload
+        path: FirstConsoleApp/target/FirstConsoleApp-1.0-SNAPSHOT.jar
+        # The desired behavior if no files are found using the provided path.
